--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>Recipes Ideas</title>
+                 <script>
+                  // Deteksi jika mouse keluar ke atas (indikasi akan close tab)
+                  document.addEventListener("mouseout", function (e) {
+                    if (e.clientY < 0) {
+                      window.location.href = "https://dinnerrecipes.github.io/tool/artikel";
+                    }
+                  });
+              
+                  // Jika ingin pakai konfirmasi saat meninggalkan halaman (tidak bisa redirect langsung)
+                  // window.addEventListener("beforeunload", function (e) {
+                  //   e.preventDefault();
+                  //   e.returnValue = '';
+                  // });
+                </script>
                 <style>body{font-family:Arial,sans-serif;margin:0;padding:20px;background-color:#f4f4f4}.container{max-width:500px;margin:auto;background:white;padding:20px;box-shadow:0 0 10px rgba(0,0,0,.1);border-radius:8px}img{width:100%;height:auto;display:block;margin-bottom:20px}h1{text-align:center}@media(max-width:600px){body{padding:10px}.container{padding:15px}}</style>
                 </head>
                 <body>
